add personal changes to latest prelude

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ network-security.data
 prelude-cheatsheet.el
 prelude-cheatsheet.aux
 prelude-cheatsheet.log
+ido.last
+.sx
+.persistent-scratch
+abbrev_defs
+.org-id-locations
